--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ section{
     font-size: 48px;
     font-weight: 700;
     line-height: 56px;
+    font-family: 'Bungee Outline', cursive;
     color: #fff;
     margin: 0 0 10px o;
 }
@@ -219,9 +220,9 @@ section{
 
 .about .content h2{
     font-weight: 700;
-    font-size: 46px;
+    font-size: 26px;
     line-height: 60px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     text-transform: uppercase;
     font-family: 'Poppins', sans-serif;
 }
@@ -630,6 +631,26 @@ section{
 #footer .social a i{
     color: #fff;
     font-size: 16px;
+}
+
+#footer .footer_contact h3 {
+    font-size: 20px;
+    padding: 0;
+    color: #2d5ece;
+    font-family: 'Raleway' sans-serif;
+}
+
+#footer .footer_contact p {
+    font-size: 16px;
+    padding: 0;
+    color: #00c28e;
+    font-family: 'Raleway' sans-serif;
+}
+.first-letter {
+    font-size: 30px;
+    color: #2d5ece;
+    text-transform: uppercase;
+    font-family: 'Bungee Outline', cursive;
 }
 /**Footer section end**/
 
