--- a/css/style.css
+++ b/css/style.css
@@ -612,21 +612,83 @@ section{
     align-self: center;
     justify-content: center;
 }
-#footer .social a{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+
+.fa-facebook {
+    padding:10px 14px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: #808B96;
+
     width: 36px;
     height: 36px;
     border-radius: 50%;
-    background-color: #777a78;
     margin: 0 3px;
-    transition: 0.3s ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+.fa-facebook:hover {
+    background-color: #3d5b99;
+}
+.fa-twitter {
+    padding:10px 12px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: #808B96;
+}
+.fa-twitter:hover {
+    background-color: #00aced;
+}
+.fa-whatsapp {
+    padding:10px 14px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: #808B96;
 
-#footer .social a:hover{
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    margin: 0 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.fa-whatsapp:hover {
     background-color: #00c28e;
 }
+.fa-youtube {
+    padding:10px 14px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: #808B96;
+
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    margin: 0 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.fa-youtube:hover {
+    background-color: #e64a41;
+}
+
+
+
 
 #footer .social a i{
     color: #fff;
