--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+
+@import url(https://fonts.googleapis.com/css?family=Lato);
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
+
+
 html{
     scroll-behavior: smooth;
 }
