--- a/css/style.css
+++ b/css/style.css
@@ -309,7 +309,60 @@ section{
     margin-right: 7px;
 }
 
-/**SOcial section end**/
+/**Scial section end**/
+
+
+/**Person section **/
+
+
+.person .content{
+    margin-top: 24px;
+}
+
+.person .content h2{
+    font-weight: 500;
+    font-size: 26px;
+    line-height: 30px;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    font-family: 'Poppins', sans-serif;
+}
+
+.person .content h3{
+    font-weight: 500;
+    line-height: 25px;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.person .content ul{
+    list-style-type: none;
+    padding: 0;
+    
+}
+.person .content ul li{
+    padding: 10px 0 0 20px;
+    display: flex;
+    border: 0.5px solid black;
+    padding-right: 18px;
+    padding-left: 28px;
+    border-radius: 5px;
+    
+}
+
+.person .content ul li p{
+    margin-bottom: 0;
+    
+
+}
+
+.person .content ul li i{
+    font-size: 20px;
+    color: #009970;
+    margin-right: 7px;
+}
+
+/**Person section end**/
 
 /**Lineage section**/
 
