--- a/css/style.css
+++ b/css/style.css
@@ -366,6 +366,77 @@ section{
 
 /**Lineage section**/
 
+/**Popup section Staet**/
+
+.popup-screen{
+
+    z-index: 999999;
+    position: fixed;
+    background: rgba(255,255,255,0.1);
+    backdrop-filter: blur(10px);
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    transition: 0.5s ease;
+    transition-property: visibility;
+}
+
+.popup-screen.active{
+    visibility: visible;
+}
+
+.popup-box{
+    position: relative;
+    background: rgba(255,255,255,0.8);
+    backdrop-filter: blur(10px);
+    max-width: 450px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 20px;
+    padding: 50px 40px;
+    border-radius: 20px;
+    box-shadow: 0 5px 25px rgb(0 0 0 / 20%);
+    transform: scale(0);
+    transition: 0.5s ease;
+    transition-property: transform;
+}
+
+.popup-screen.active .popup-box{
+    transform: scale(1);
+}
+.popup-box h2{
+    font-size: 2.0em;
+    font-weight: 800;
+    margin-bottom: 20px;
+}
+.popup-box p{
+    font-size: 1em;
+    margin-bottom: 30px;
+}
+
+.close-btn{
+    position: absolute;
+    font-size: 1em;
+    top: 0;
+    right: 0;
+    margin: 15px;
+    cursor: pointer;
+    opacity: 0.5;
+    transition: 0.3s ease;
+    transition-property: opacity;
+}
+
+.close-btn:hover{
+    opacity: 1;
+}
+
+
+/**Popup section end**/
 
 .genealogy-scroll::-webkit-scrollbar {
     width: 5px;
